# Drum_Classification_AI_tool

./: .gitignore  LICENSE  README.md  environment.yml  references.rtf  references.txt  setup.cfg
data/: words_to_blacklist.txt
data/augmented_data/time_stretched/: .gitkeep
notebooks/: Untitled1.ipynb  data_augmentation_tests.ipynb  feature_extraction_tests.ipynb  length_analysis.ipynb  training_cnn_test.ipynb  training_nn_tests.ipynb  training_tests.ipynb
src/: __init__.py  config.py  data_augmentation.py  feature_engineering.py  global_helper.py  helper.py  helper_training.py  load_drums.py  load_drums_helper.py  main.py  params.py  paths.py  preprocess.py  preprocessing.py  read_audio.py  setup.py  training.py  training_nn.py
src/a_load/: load_drums.py
src/b_features/: feature_engineering.py  feature_extractors.py
src/c_train/: training.py  training_nn.py
src/data_to_features/: data_augmentation.py  feature_engineering.py  helper.py  preprocessing.py
src/drum-class-rayandaod/: config.py  main.py  run.sh  run_app.sh
src/drum-class-rayandaod/a_data/: helper.py  load.py
src/drum-class-rayandaod/a_load/: augment_data.py
src/drum-class-rayandaod/b_features/: extract.py  extractors.py  helper.py
src/drum-class-rayandaod/c_train/: basic.py  nn.py  (+7 more)
src/features/: feature_engineering.py  feature_extractors.py  feature_helper.py
src/helpers/: global_helper.py
src/load/: augment_data.py  load_drums.py  load_drums_helper.py
src/train/: __init__.py
src/training/: helper.py  training.py  training_nn.py
src/z_helpers/: audio_tools.py  global_helper.py
(+8 files in other folders)
