[metadata]
name = drum-class-rayandaod
version = 1.0
author = Rayan Daod Nathoo
author_email = rayan.daodnathoo@epfl.ch
description = AI drum classification tool for music production samples
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rayandaod/Drum_Classification_AI_tool
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src